--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">BookStore</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#">BookStore</a><button data-toggle="collapse"
+                class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
@@ -30,43 +32,50 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
-                            <h3>&nbsp;Title</h3>
-                            <h4>Author</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">Read it!</a><a class="btn btn-outline-primary btn-sm" role="button" href="#" style="margin: 0 15px;">Delete</a>
+                            <h3>Title</h3>
+                            <h4>Author</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">Read
+                                it!</a><a class="btn btn-outline-primary btn-sm" role="button" href="#"
+                                style="margin: 0 15px;">Delete</a>
                             <div class="tags"></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
+                                href="#">See More</a>
                             <div class="tags"><a href="#">JavaScript</a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
+                                href="#">See More</a>
                             <div class="tags"><a href="#">CSS</a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
+                                href="#">See More</a>
                             <div class="tags"><a href="#">Ruby</a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
+                                href="#">See More</a>
                             <div class="tags"><a href="#">PHP</a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
+                                href="#">See More</a>
                             <div class="tags"><a href="#">HTML</a></div>
                         </div>
                     </div>
