--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - BookStore</title>
+    <title>BookStore</title>
+    <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
@@ -18,7 +19,7 @@
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
+                    <li class="nav-item"><a class="nav-link new-book" href="#">Add Book</a></li>
                 </ul>
             </div>
         </div>
@@ -33,60 +34,41 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Title</h3>
-                            <h4>Author</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">Read
-                                it!</a><a class="btn btn-outline-primary btn-sm" role="button" href="#"
+                            <h4>Author</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">Already Read
+                                It!</a><a class="btn btn-outline-danger btn-sm" role="button" href="#"
                                 style="margin: 0 15px;">Delete</a>
                             <div class="tags"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
-                                href="#">See More</a>
-                            <div class="tags"><a href="#">JavaScript</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
-                                href="#">See More</a>
-                            <div class="tags"><a href="#">CSS</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
-                                href="#">See More</a>
-                            <div class="tags"><a href="#">Ruby</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
-                                href="#">See More</a>
-                            <div class="tags"><a href="#">PHP</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button"
-                                href="#">See More</a>
-                            <div class="tags"><a href="#">HTML</a></div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <section class="portfolio-block hire-me popup js-popup">
+        <div class="container">
+            <div class="heading">
+                <h2>Add Book</h2>
+            </div>
+            <form>
+                <div class="form-group"><label for="subject">Title</label><input class="form-control" type="text" id="subject"></div>
+                <div class="form-group"><label for="email">Author</label><input class="form-control" type="email" id="email"></div>
+                <div class="form-group"><label for="message">Number of Pages</label><input class="form-control" type="text" id="message"></div>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6" style="padding: 0px;"><label for="hire-date">Read it already</label><input type="checkbox" style="padding: 17px;margin: 35px;"></div>
+                        <div class="col-md-6 button"><button class="btn btn-primary btn-block" type="submit">Save</button></div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+    <div class="overlay js-overlay"></div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
