--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
-                            <h3>Title</h3>
-                            <h4>Author</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">Already Read
-                                It!</a><a class="btn btn-outline-danger btn-sm" role="button" href="#"
-                                style="margin: 0 15px;">Delete</a>
-                            <div class="tags"></div>
+                            <h3>Title: </h3>
+                            <h4>Author: </h4>
+                            <h4>Number of pages: </h4>
+                            <a class="btn btn-outline-primary btn-sm" role="button" href="#">Already Read
+                                It!</a>
+                            <a class="btn btn-outline-danger btn-sm" role="button" href="#"">Delete</a>
                         </div>
                     </div>
                 </div>
