--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">BookStore</a><button data-toggle="collapse"
-                class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span
-                    class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link new-book" href="#">Add Book</a></li>
-                </ul>
-            </div>
+        <div class="container">
+            <a class="navbar-brand logo" href="#">BookStore</a>
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link new-book" href="#">Add Book</a></li>
+            </ul>
         </div>
     </nav>
     <main class="page projets-page">
@@ -45,31 +42,42 @@
             </div>
         </section>
     </main>
-    <section class="portfolio-block hire-me popup js-popup">
+    <section class=" portfolio-block hire-me popup js-popup">
         <div class="container">
             <div class="heading">
                 <h2>Add Book</h2>
             </div>
-            <form>
-                <div class="form-group"><label for="subject">Title</label><input class="form-control" type="text" id="subject"></div>
-                <div class="form-group"><label for="email">Author</label><input class="form-control" type="email" id="email"></div>
-                <div class="form-group"><label for="message">Number of Pages</label><input class="form-control" type="text" id="message"></div>
+            <form class="new-book-form">
                 <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6" style="padding: 0px;"><label for="hire-date">Read it already</label><input type="checkbox" style="padding: 17px;margin: 35px;"></div>
-                        <div class="col-md-6 button"><button class="btn btn-primary btn-block" type="submit">Save</button></div>
-                    </div>
+                    <label for="subject">Title</label>
+                    <input class="form-control" type="text" id="title">
+                </div>
+                <div class="form-group">
+                    <label for="email">Author</label>
+                    <input class="form-control" type="text" id="author">
+                </div>
+                <div class="form-group">
+                    <label for="message">Number of Pages</label>
+                    <input class="form-control" type="text" id="numOfPages">
+                </div>
+                <div class="form-group"> 
+                    <label for="hire-date">Read it already</label>
+                    <input type="checkbox" style="padding: 10px;" id="read">
+                </div>       
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit">Save</button>
+                        
                 </div>
             </form>
         </div>
-    </section>
-    <div class="overlay js-overlay"></div>
+        </section>
+        <div class="overlay js-overlay"></div>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-    <script src="assets/js/index.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
+        <script src="assets/js/theme.js"></script>
+        <script src="assets/js/index.js"></script>
 </body>
 
 </html>
