--- a/index.html
+++ b/index.html
@@ -28,21 +28,14 @@
                     <h2>Our books</h2>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Title: </h3>
-                            <h4>Author: </h4>
-                            <h4>Number of pages: </h4>
-                            <a class="btn btn-outline-primary btn-sm" role="button" href="#">Already Read
-                                It!</a>
-                            <a class="btn btn-outline-danger btn-sm" role="button" href="#"">Delete</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
     </main>
     <section class=" portfolio-block hire-me popup js-popup">
+        <div class="book-exist-error">
+            <h5>Book already exists, try another one</h5>
+        </div>
         <div class="container">
             <div class="heading">
                 <h2>Add Book</h2>
